--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=0.4.7"
   },
   "dependencies": {
-    "handlebars": "~1.0",
+    "handlebars": "1.0.10",
     "uglify-js": "~1.2",
     "file": "~0.2"
   },
